# CppTemplate

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  guidelines.md  vcpkg.json
.github/workflows/: build.yml  ci.yml  cppcheck.yml  linter.yml
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
core/src/: core_inc.h  pch.cpp  pch.h
core/src/core/template/: template.cpp  template.h
core/src/core/utils/: logger.cpp  logger.h  profiler.cpp  profiler.h  utils.h
scripts/: build.sh  run.sh  setup.sh
tests/: CMakeLists.txt  test_logger.cpp
